--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		  </dependency>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.api-client</groupId>
+		    <artifactId>google-api-client</artifactId>
+		    <version>2.2.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
