--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 		    <artifactId>google-api-client</artifactId>
 		    <version>2.2.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.thymeleaf</groupId>
+		    <artifactId>thymeleaf</artifactId>
+		    <version>3.1.2.RELEASE</version>
+		</dependency>
+
 
 
 		<dependency>
